fix error graph

--- a/templates/dashboard_pais.html
+++ b/templates/dashboard_pais.html
@@ -405,7 +405,7 @@ $(function () {
         },
 
         title: {
-            text: '',
+            text: 'Capitales en medios de vidas',
             x: -80
         },
 
@@ -431,10 +431,9 @@ $(function () {
         },
 
         legend: {
-            align: 'right',
-            verticalAlign: 'top',
-            y: 70,
-            layout: 'vertical'
+           align: 'center',
+           verticalAlign: 'bottom',
+           layout: 'horizontal'
         },
 
         series: [{
@@ -462,7 +461,7 @@ $(function () {
             type: 'column'
         },
         title: {
-            text: 'RENDIMIENTOS - EN PRIMERA'
+            text: 'RENDIMIENTOS'
         },
         subtitle: {
             text: 'de frijol, maíz'
