--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -405,7 +405,7 @@ $(function () {
         },
 
         title: {
-            text: '',
+            text: 'Capitales en medios de vidas',
             x: -80
         },
 
@@ -429,12 +429,10 @@ $(function () {
             shared: true,
             pointFormat: '<span style="color:{series.color}">{series.name}: <b>{point.y:,.0f}</b><br/>'
         },
-
         legend: {
-            align: 'right',
-            verticalAlign: 'top',
-            y: 70,
-            layout: 'vertical'
+           align: 'center',
+           verticalAlign: 'bottom',
+           layout: 'horizontal'
         },
 
         series: [{
@@ -462,7 +460,7 @@ $(function () {
             type: 'column'
         },
         title: {
-            text: 'RENDIMIENTOS - EN PRIMERA'
+            text: 'RENDIMIENTOS'
         },
         subtitle: {
             text: 'de frijol, maíz'
