--- a/templates/menu_indicadores.html
+++ b/templates/menu_indicadores.html
@@ -26,9 +26,9 @@
 		        <div class="col-xs-12 col-ms-6 col-md-6 col-lg-3">
 		        	<a class="btn" href="/practicas/">Prácticas agroecológicas</a>
 		        </div>
-		        <!-- <div class="col-xs-12 col-ms-6 col-md-6 col-lg-3">
+		        <div class="col-xs-12 col-ms-6 col-md-6 col-lg-3">
 		        	<a class="btn" href="/ingresos/">Ingresos del hogar</a>
-		        </div> -->
+		        </div> 
 		        <div class="col-xs-12 col-ms-6 col-md-6 col-lg-3">
 		        	<a class="btn" href="/gastos/">Gastos en el hogar</a>
 		        </div>
@@ -38,9 +38,9 @@
 		        <div class="col-xs-12 col-ms-6 col-md-6 col-lg-3">
 		       		<a class="btn" href="/seguridad/">Seguridad Alimentaria</a>
 		        </div>
-		        <!-- <div class="col-xs-12 col-ms-6 col-md-6 col-lg-3">
+		        <div class="col-xs-12 col-ms-6 col-md-6 col-lg-3">
 		        	<a class="btn" href="/calorias/">Calorías en el hogar</a>
-		        </div> -->
+		        </div>
  				<div class="col-xs-12 col-ms-6 col-md-6 col-lg-3">
 		        	<a class="btn" href="/genero/">Género</a>
 		        </div>
