--- a/templates/filtros.html
+++ b/templates/filtros.html
@@ -1,6 +1,13 @@
 <div class="row filtros">
 	<ol class="breadcrumb">
 	<li>Filtros Seleccionados: </li>
+  {% if request.session.fecha %}
+        <li>
+          <a href="#">
+                {{ request.session.fecha }}
+            </a>
+          </li>   
+    {% endif %}
 	{% if request.session.sexo %}
         <li>
         	<a href="#">
