--- a/templates/indicadores1.html
+++ b/templates/indicadores1.html
@@ -5,6 +5,7 @@
 <script src="/static/js/classie.js"></script>
 <script type="text/javascript" src="/static/js/bootstrap-multiselect.js"></script>
 <script type="text/javascript">
+$( "#id_fecha" ).addClass( "form-control" );
 		$(document).ready(function() {
 				$('#id_estacion').multiselect();
 				$('#id_pais').multiselect();
@@ -228,6 +229,16 @@ footer{}
 							</div>
 							<div class="panel-body">
 								<form  action="." method="POST"> {% csrf_token %}
+
+									<div class="row">
+										<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+											<label for="">{{form.fecha.label}}</label>
+										</div>
+										<div class="col-xs-12 col-sm-6 col-md-6 col-lg-8">
+											{{form.fecha}}
+										</div>
+
+									</div>
 
 									<div class="row">
 										<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
