--- a/templates/indicadores1.html
+++ b/templates/indicadores1.html
@@ -240,7 +240,7 @@ footer{}
 
 									</div>
 
-									<div class="row">
+									<!-- <div class="row">
 										<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
 											<label for="">{{form.estacion.label}}</label>
 										</div>
@@ -248,7 +248,7 @@ footer{}
 											{{form.estacion}}
 										</div>
 
-									</div>
+									</div> -->
 
 									<div class="row">
 										<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
