--- a/templates/indicadores/productividad.html
+++ b/templates/indicadores/productividad.html
@@ -49,7 +49,7 @@
               {% for k,v in dicc_productividad.items %}
 
                  <li class="col-xs-6 col-sm-4 col-md-2 col-lg-2 {% if forloop.counter == 1 %}active{% endif %}" role="presentation">
-                    <a class="btn btn-anos" href="#home-{{k}}" aria-controls="home{{forloop.counter}}" role="tab" data-toggle="tab">{{k}}</a>
+                    <a class="btn btn-anos" href="#home-{{k}}" aria-controls="home{{forloop.counter}}" role="tab" data-toggle="tab">{{k}}- fam({{v.2}})</a>
                  </li>
               {% endfor %}
 
