borrando el simbolo de cordoda

--- a/templates/indicadores/ingresos.html
+++ b/templates/indicadores/ingresos.html
@@ -117,7 +117,7 @@
                                             <th>---</th>
                                             <th>{{v.4|floatformat:2|intcomma}}</th>
                                             <th>{{v.5|floatformat:2|intcomma}}</th>
-                                            <th>C$ {{v.3|floatformat:2|intcomma}}</th>
+                                            <th> {{v.3|floatformat:2|intcomma}}</th>
                                         </tr>
                                     </tfoot>
 
@@ -167,7 +167,7 @@
                                             <th>---</th>
                                             <th>{{v.14|floatformat:1|intcomma}}</th>
                                             <th>{{v.15|floatformat:1|intcomma}}</th>
-                                            <th>C$ {{v.7|floatformat:2|intcomma}}</th>
+                                            <th> {{v.7|floatformat:2|intcomma}}</th>
                                         </tr>
                                     </tfoot>
 
@@ -218,7 +218,7 @@
                                             <th>---</th>
                                             <th>{{v.17|floatformat:1|intcomma}}</th>
                                             <th>{{v.16|floatformat:1|intcomma}}</th>
-                                            <th>C$ {{v.9|floatformat:2|intcomma}}</th>
+                                            <th> {{v.9|floatformat:2|intcomma}}</th>
                                         </tr>
                                     </tfoot>
                                 </table>
@@ -258,7 +258,7 @@
                                             <th>---</th>
                                             <th>---</th>
                                             <th>---</th>
-                                            <th>C$ {{v.11|floatformat:2|intcomma}}</th>
+                                            <th> {{v.11|floatformat:2|intcomma}}</th>
                                         </tr>
                                     </tfoot>
 
@@ -302,7 +302,7 @@
                                             <th>---</th>
                                             <th>---</th>
                                             <th>---</th>
-                                            <th>C$ {{v.13|floatformat:2|intcomma}}</th>
+                                            <th> {{v.13|floatformat:2|intcomma}}</th>
                                         </tr>
                                     </tfoot>
 
@@ -362,7 +362,7 @@
                                             <td><strong>TOTAL</strong></td>
                                             <td>---</td>
                                             <td>---</td>
-                                            <td class="total_ingreso">C$ {{v.18|floatformat:2|intcomma}}</td>
+                                            <td class="total_ingreso"> {{v.18|floatformat:2|intcomma}}</td>
                                         </tr>
                                     </tfoot>
 
