--- a/templates/base.html
+++ b/templates/base.html
@@ -57,7 +57,7 @@
 							</ul>
 							<ul class="nav navbar-nav navbar-right anclas-2">
 								<li><a href="/">Inicio</a></li>
-								<li><a href="http://proyecto-joa.cafodca.org/admin/">Proyecto JOA</a></li>
+								<li><a href="http://proyecto-joa.cafodca.org/">Proyecto JOA</a></li>
 								<li><a data-toggle="modal" href='#modal'>Acerca del SMF</a></li>
 								<li><a href="/galeria/">Galería de mapas</a></li>
 								<li><a href="/indicadores1/">Consultar</a></li>
